bug squash

--- a/src/app/quick-view/quick-view-drawer.component.css
+++ b/src/app/quick-view/quick-view-drawer.component.css
@@ -81,6 +81,7 @@
 .combat-shell {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-end;
 }
 
 .combat-square {
